2004-08-24  Jon Lapham  <lapham@jandr.org>
    * guide/C/ch_oview.xml: chapter overhaul by pks
    * guide/C/ch_oview.xml: update language support list

2004-04-19  Derek Atkins  <derek@ihtfp.com>
	* configure.in: check for PERL=no and error out if you can't find perl

2004-04-10  Chris Lyttle  <chris@wilddev.net>
	* NEWS: Release of version 1.8.4
	* configure.in: Release of version 1.8.4
	* doc-tools/dbadd.c: Added patch by Alex Rostovtsev
	  <al_rost@hotmail.com> from gentoo bug #27978 to 
	  fix issue with dbadd on 2.6 kernels.
	* guide/C/*: Updated docs with release info, 
	  removed older .txt files.
	* help/C/gnucash-help.xml: Updated with release info
	  and revision info.
	
2004-03-23  Derek Atkins  <derek@ihtfp.com>
	* configure.in:  add db-4.1 and db-4.2

2004-02-07 Jon Lapham <lapham@extracta.com.br>
    * guide/C/appendixb.xml: fix FAQ URL

2004-01-14 Jon Lapham <lapham@extracta.com.br>
    * guide/C/ch_basics.xml: Derek Atkins suggestion on register styles

2004-01-13 Jon Lapham <lapham@extracta.com.br>
    * guide/C/ch_basics.xml: Derek Atkins suggested updates

2003-11-16 Jon Lapham <lapham@extracta.com.br>
    * guide/C/ch_txns.xml: fix minor nomenclature inconsistency
    * guide/C/ch_cc.xml: fix minor nomenclature inconsistency
    * guide/C/ch_txns.xml: new sxn section from Sebastien Millet
    * guide/C/figures/txns_sxn*: new sxn images from Sebastien Millet

2003-09-23  Jon Lapham <lapham@extracta.com.br>
    * guide/C/ch_reports.xml: new chapter on reports, very preliminary

2003-09-16  Jon Lapham <lapham@extracta.com.br>
    * guide/C/appendixb.xml: update combine 2 accounts FAQ

2003-09-10  Jon Lapham <lapham@extracta.com.br>
    * guide/C/chapter*.xml: renamed all chapters to use the "section"
      prefix nomenlature, ie: chapter1.xml -> ch_oview.xml
      Kept the "ch_" portion of the filename so it is easy to work with
      all the files in UNIX.  (ie: ls ch_*).
    * guide/C/gnucash-guide.xml: updated to reflect the new filenames