@@ -181,4 +181,5 @@ help/C/Makefile
 help/de_DE/Makefile
 guide/Makefile
 guide/C/Makefile
+guide/de_DE/Makefile
 Makefile)
