@@ -1,0 +1,5 @@
+Makefile
+Makefile.in
+gnucash-guide
+gnucash-guide-de_DE.omf.out
+omf_timestamp
