@@ -1,0 +1,7 @@
+figdir = figures
+docname = gnucash-guide
+lang = de_DE
+omffile = gnucash-guide-de_DE.omf
+entities = 
+include $(top_srcdir)/xmldocs.make
+dist-hook: app-dist-hook
