@@ -1,0 +1,35 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<omf>
+  <resource>
+    <creator>
+      chris@wilddev.net (Chris Lyttle)
+    </creator>
+    <creator>
+      carol@io.com (Carol Champagne)
+    </creator>
+    <maintainer>
+      chris@wilddev.net (Chris Lyttle)
+    </maintainer>
+    <title>
+      GnuCash Tutorial and Concepts Guide
+    </title>    
+    <date>
+      2003-01-05
+    </date>
+    <version identifier="1.8.0" date="2003-02-02" description="Created for
+    GnuCash 1.8.0 Release"/>
+    <subject category="GNOME|Applications"/>
+    <description>
+      This document provides a tutorial and concepts guide for the GnuCash 
+      Financial Application.
+    </description>
+    <type>
+      user's guide
+    </type>
+    <format mime="text/xml" dtd="-//OASIS//DTD DocBook XML V4.1.2//EN"/>
+    <identifier url="gnucash-guide.xml"/>
+    <language code="C"/>
+    <relation seriesid="ef1352c0-0831-11d7-91de-f42a0df0ca1a"/>
+    <rights type="GNU FDL" license.version="1.1" holder="Chris Lyttle"/>
+  </resource>        
+</omf>
