@@ -1,0 +1,239 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE book PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN"
+    "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
+<!ENTITY manrevision "1.8.4">
+<!ENTITY date "11th April 2004">
+<!ENTITY app "GnuCash">
+]>
+<!--
+<!ENTITY chapter1 SYSTEM "ch_oview.xml">
+<!ENTITY chapter2 SYSTEM "ch_basics.xml">
+<!ENTITY chapter3 SYSTEM "ch_accts.xml">
+<!ENTITY chapter4 SYSTEM "ch_txns.xml">
+<!ENTITY chapter5 SYSTEM "ch_cbook.xml">
+<!ENTITY chapter6 SYSTEM "ch_cc.xml">
+<!ENTITY chapter7 SYSTEM "ch_loans.xml">
+<!ENTITY chapter8 SYSTEM "ch_invest.xml">
+<!ENTITY chapter9 SYSTEM "ch_capgain.xml">
+<!ENTITY chapter10 SYSTEM "ch_currency.xml">
+<!ENTITY chapter11 SYSTEM "ch_dep.xml">
+<!ENTITY chapter12 SYSTEM "ch_bus_ar.xml">
+<!ENTITY chapter13 SYSTEM "ch_bus_ap.xml">
+<!ENTITY chapter14 SYSTEM "ch_bus_pay.xml">
+<!ENTITY appendixa SYSTEM "appendixa.xml">
+<!ENTITY appendixb SYSTEM "appendixb.xml">
+<!ENTITY appendixc SYSTEM "appendixc.xml">
+<!ENTITY legal SYSTEM "legal.xml">
+<!ENTITY GFDL SYSTEM "fdl-appendix.xml">
+-->
+<!--
+      (Do not remove this comment block.)
+  Template Maintained by the GNOME Documentation Project:
+	  http://developer.gnome.org/projects/gdp
+  Template version: 2.0 beta
+  Template last modified Feb 12, 2002
+-->
+<!--
+      (Do not remove this comment block.)
+  Version: 1.8.4
+  Last modified: April 11th, 2004
+  Maintainers:
+               Chris Lyttle   <chris@wilddev.net)
+  Translators:
+               (translators put your name and email here)
+-->
+<book id="index" lang="en-US">
+<!-- please do not change the id; for translations, change lang to -->
+<!-- appropriate code -->
+ <bookinfo>
+  <title>&app; Tutorial and Concepts Guide</title>
+  <edition>V&manrevision;</edition>
+
+  <copyright>
+   <year>2003-2004</year>
+   <holder>Jon Lapham</holder>
+  </copyright>
+  
+  <copyright>
+   <year>2002</year>
+   <holder>Chris Lyttle</holder>
+  </copyright>
+  
+  <copyright>
+   <year>2001</year>
+   <holder>Carol Champagne and Chris Lyttle</holder>
+  </copyright>
+
+ <!-- translators: uncomment this:
+
+  <copyright>
+   <year>2000</year>
+   <holder>ME-THE-TRANSLATOR (Latin translation)</holder>
+  </copyright>
+
+   -->
+
+    <publisher>
+       <publishername> GnuCash Documentation Team </publishername>
+    </publisher>
+
+<!--
+    &legal;
+-->
+
+  <authorgroup>
+
+    <author>
+     <firstname>Carol</firstname>
+     <surname>Champagne</surname>
+     <authorblurb>
+      <para>
+       <email>carol@io.com</email>
+      </para>
+     </authorblurb>
+    </author>
+
+    <author>
+     <firstname>Chris</firstname>
+     <surname>Lyttle</surname>
+     <affiliation>
+          <orgname>GnuCash Documentation Team</orgname>
+          <address> <email>chris@wilddev.net</email> </address>
+     </affiliation>
+    </author>
+    
+    <author>
+     <firstname>Jon</firstname>
+     <surname>Lapham</surname>
+     <affiliation>
+          <orgname>GnuCash Documentation Team</orgname>
+          <address> <email>lapham@extracta.com.br</email> </address>
+     </affiliation>
+    </author>
+    
+<!-- This is appropriate place for other contributors: translators,
+      maintainers,  etc. Commented out by default.
+       <othercredit role="translator">
+        <firstname>Latin</firstname>
+        <surname>Translator 1</surname>
+        <affiliation>
+          <orgname>Latin Translation Team</orgname>
+          <address> <email>translator@gnome.org</email> </address>
+        </affiliation>
+        <contrib>Latin translation</contrib>
+      </othercredit>
+-->
+
+  </authorgroup>
+
+  <revhistory>
+      <revision>
+        <revnumber>&app; Tutorial and Concepts Guide V&manrevision;</revnumber>
+        <date>&date;</date>
+        <revdescription>
+          <para role="author">Jon Lapham
+            <email>lapham@extracta.com.br</email>
+          </para>
+          <para role="publisher">GnuCash Documentation Team</para>
+        </revdescription>
+      </revision>
+      <revision>
+        <revnumber>GnuCash Tutorial and Concepts Guide V1.8.3</revnumber>
+        <date>Aug 2003</date>
+        <revdescription>
+          <para role="author">Jon Lapham
+            <email>lapham@extracta.com.br</email>
+          </para>
+          <para role="publisher">GnuCash Documentation Team</para>
+        </revdescription>
+      </revision>
+      <revision>
+        <revnumber>GnuCash Tutorial and Concepts Guide V1.8.2</revnumber>
+        <date>Aug 2003</date>
+        <revdescription>
+          <para role="author">Jon Lapham
+            <email>lapham@extracta.com.br</email>
+          </para>
+          <para role="publisher">GnuCash Documentation Team</para>
+        </revdescription>
+      </revision>
+      <revision>
+        <revnumber>GnuCash Tutorial and Concepts Guide V1.8.1</revnumber>
+        <date>May 2003</date>
+        <revdescription>
+          <para role="author">Chris Lyttle
+            <email>chris@wilddev.net</email>
+          </para>
+          <para role="publisher">GnuCash Documentation Team</para>
+        </revdescription>
+      </revision>
+      <revision>
+        <revnumber>GnuCash Tutorial and Concepts Guide V1.8.0</revnumber>
+        <date>Jan 2003</date>
+        <revdescription>
+          <para role="author">Chris Lyttle
+            <email>chris@wilddev.net</email>
+          </para>
+          <para role="publisher">GnuCash Documentation Team</para>
+        </revdescription>
+      </revision>
+      <revision>
+        <revnumber>GnuCash User Guide V1.6.5</revnumber>
+        <date>June 2002</date>
+        <revdescription>
+          <para role="author">Chris Lyttle
+            <email>chris@wilddev.net</email>
+          </para>
+          <para role="publisher">GnuCash Documentation Team</para>
+        </revdescription>
+      </revision>
+      <revision>
+        <revnumber>GnuCash User Guide V1.6.0</revnumber>
+        <date>October 2001</date>
+        <revdescription>
+          <para role="author">Carol Champagne
+            <email>carol@io.com</email>
+          </para>
+          <para role="publisher">GnuCash Documentation Team</para>
+        </revdescription>
+      </revision>
+    </revhistory>
+
+  <releaseinfo>
+   This Guide contains a tutorial for using GnuCash and describes the concepts
+   behind GnuCash.
+  </releaseinfo>
+  <legalnotice>
+    <title>Feedback</title>
+      <para>To report a bug or make a suggestion regarding this package or
+        this manual, follow the directions at the
+        <ulink url="http://bugzilla.gnome.org"
+          >GNOME Bug Tracking System</ulink>.
+      </para>
+<!-- Translators may also add here feedback address for translations -->
+  </legalnotice>
+
+</bookinfo>
+<!--
+&chapter1;
+&chapter2;
+&chapter3;
+&chapter4;
+&chapter5;
+&chapter6;
+&chapter7;
+&chapter8;
+&chapter9;
+&chapter10;
+&chapter11;
+&chapter12;
+&chapter13;
+&chapter14;
+&appendixa;
+&appendixb;
+&appendixc;
+
+&GFDL;
+-->
+
+</book>
