@@ -1,3 +1,8 @@
+2004-10-03  Christian Stimming  <stimming@tuhh.de>
+
+	* guide/de_DE/gnucash-guide.xml: Add outline for German
+	translation of gnucash guide.
+
 2004-08-24  Jon Lapham  <lapham@jandr.org>
     * guide/C/ch_oview.xml: chapter overhaul by pks
     * guide/C/ch_oview.xml: update language support list
